lang/parser.output

state 0
	$accept: .spec $end 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  error

	spec  goto 1
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  toplevel_body.    (1)
	spec:  toplevel_body.spec 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  reduce 1 (src line 126)

	spec  goto 13
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 3
	toplevel_body:  data_def.    (3)

	.  reduce 3 (src line 141)


state 4
	toplevel_body:  module_def.    (4)

	.  reduce 4 (src line 143)


state 5
	toplevel_body:  const_def.    (5)

	.  reduce 5 (src line 144)


state 6
	toplevel_body:  proc_def.    (6)

	.  reduce 6 (src line 145)


state 7
	toplevel_body:  init_block.    (7)

	.  reduce 7 (src line 146)


state 8
	data_def:  DATA.IDENTIFIER { idents_one } ; 

	IDENTIFIER  shift 14
	.  error


state 9
	module_def:  MODULE.IDENTIFIER ( parameters_zero ) { module_body_zero } ; 

	IDENTIFIER  shift 15
	.  error


state 10
	const_def:  CONST.IDENTIFIER type ASSIGN expr ; 

	IDENTIFIER  shift 16
	.  error


state 11
	proc_def:  PROC.IDENTIFIER ( parameters_zero ) { statements_zero } ; 

	IDENTIFIER  shift 17
	.  error


state 12
	init_block:  INIT.{ statements_zero } ; 

	{  shift 18
	.  error


state 13
	spec:  toplevel_body spec.    (2)

	.  reduce 2 (src line 133)


state 14
	data_def:  DATA IDENTIFIER.{ idents_one } ; 

	{  shift 19
	.  error


state 15
	module_def:  MODULE IDENTIFIER.( parameters_zero ) { module_body_zero } ; 

	(  shift 20
	.  error


state 16
	const_def:  CONST IDENTIFIER.type ASSIGN expr ; 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 21

state 17
	proc_def:  PROC IDENTIFIER.( parameters_zero ) { statements_zero } ; 

	(  shift 26
	.  error


state 18
	init_block:  INIT {.statements_zero } ; 
	statements_zero: .    (18)

	IDENTIFIER  shift 29
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	CONST  shift 10
	VAR  shift 31
	IF  shift 32
	CHOICE  shift 33
	RECV  shift 34
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	PEEK  shift 35
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	SEND  shift 36
	FOR  shift 37
	BREAK  shift 38
	GOTO  shift 39
	SKIP  shift 40
	{  shift 30
	;  shift 42
	(  shift 47
	[  shift 52
	.  reduce 18 (src line 193)

	const_def  goto 43
	statements_zero  goto 27
	statement  goto 28
	expr  goto 41

state 19
	data_def:  DATA IDENTIFIER {.idents_one } ; 

	IDENTIFIER  shift 54
	.  error

	idents_one  goto 53

state 20
	module_def:  MODULE IDENTIFIER (.parameters_zero ) { module_body_zero } ; 
	parameters_zero: .    (82)

	IDENTIFIER  shift 58
	.  reduce 82 (src line 458)

	parameters_zero  goto 55
	parameters_one  goto 56
	parameter  goto 57

state 21
	const_def:  CONST IDENTIFIER type.ASSIGN expr ; 

	ASSIGN  shift 59
	.  error


state 22
	type:  IDENTIFIER.    (94)

	.  reduce 94 (src line 516)


state 23
	type:  [.] type 

	]  shift 60
	.  error


state 24
	type:  CHANNEL.{ types_one } 
	type:  CHANNEL.[ ] { types_one } 
	type:  CHANNEL.[ expr ] { types_one } 

	{  shift 61
	[  shift 62
	.  error


state 25
	type:  UNSTABLE.CHANNEL { types_one } 
	type:  UNSTABLE.CHANNEL [ ] { types_one } 
	type:  UNSTABLE.CHANNEL [ expr ] { types_one } 

	CHANNEL  shift 63
	.  error


state 26
	proc_def:  PROC IDENTIFIER (.parameters_zero ) { statements_zero } ; 
	parameters_zero: .    (82)

	IDENTIFIER  shift 58
	.  reduce 82 (src line 458)

	parameters_zero  goto 64
	parameters_one  goto 56
	parameter  goto 57

state 27
	init_block:  INIT { statements_zero.} ; 

	}  shift 65
	.  error


state 28
	statements_zero:  statement.statements_zero 
	statements_zero: .    (18)

	IDENTIFIER  shift 29
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	CONST  shift 10
	VAR  shift 31
	IF  shift 32
	CHOICE  shift 33
	RECV  shift 34
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	PEEK  shift 35
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	SEND  shift 36
	FOR  shift 37
	BREAK  shift 38
	GOTO  shift 39
	SKIP  shift 40
	{  shift 30
	;  shift 42
	(  shift 47
	[  shift 52
	.  reduce 18 (src line 193)

	const_def  goto 43
	statements_zero  goto 66
	statement  goto 28
	expr  goto 41

state 29
	statement:  IDENTIFIER.: statement 
	statement:  IDENTIFIER.ASSIGN expr ; 
	statement:  IDENTIFIER.ADD_ASSIGN expr ; 
	statement:  IDENTIFIER.SUB_ASSIGN expr ; 
	statement:  IDENTIFIER.MUL_ASSIGN expr ; 
	statement:  IDENTIFIER.QUO_ASSIGN expr ; 
	statement:  IDENTIFIER.REM_ASSIGN expr ; 
	statement:  IDENTIFIER.AND_ASSIGN expr ; 
	statement:  IDENTIFIER.OR_ASSIGN expr ; 
	statement:  IDENTIFIER.XOR_ASSIGN expr ; 
	statement:  IDENTIFIER.SHL_ASSIGN expr ; 
	statement:  IDENTIFIER.SHR_ASSIGN expr ; 
	statement:  IDENTIFIER.( arguments_one ) ; 
	expr:  IDENTIFIER.    (51)

	ADD_ASSIGN  shift 69
	SUB_ASSIGN  shift 70
	MUL_ASSIGN  shift 71
	QUO_ASSIGN  shift 72
	REM_ASSIGN  shift 73
	AND_ASSIGN  shift 74
	OR_ASSIGN  shift 75
	XOR_ASSIGN  shift 76
	SHL_ASSIGN  shift 77
	SHR_ASSIGN  shift 78
	ASSIGN  shift 68
	(  shift 79
	:  shift 67
	.  reduce 51 (src line 329)


state 30
	statement:  {.statements_zero } ; 
	statements_zero: .    (18)

	IDENTIFIER  shift 29
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	CONST  shift 10
	VAR  shift 31
	IF  shift 32
	CHOICE  shift 33
	RECV  shift 34
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	PEEK  shift 35
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	SEND  shift 36
	FOR  shift 37
	BREAK  shift 38
	GOTO  shift 39
	SKIP  shift 40
	{  shift 30
	;  shift 42
	(  shift 47
	[  shift 52
	.  reduce 18 (src line 193)

	const_def  goto 43
	statements_zero  goto 80
	statement  goto 28
	expr  goto 41

state 31
	statement:  VAR.IDENTIFIER type ; 
	statement:  VAR.IDENTIFIER type ASSIGN expr ; 

	IDENTIFIER  shift 81
	.  error


state 32
	statement:  IF.expr { statements_zero } ; 
	statement:  IF.expr { statements_zero } ELSE { statements_zero } ; 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 82

state 33
	statement:  CHOICE.blocks_one ; 

	{  shift 85
	.  error

	blocks_one  goto 84

state 34
	statement:  RECV.( arguments_one ) ; 

	(  shift 86
	.  error


state 35
	statement:  PEEK.( arguments_one ) ; 

	(  shift 87
	.  error


state 36
	statement:  SEND.( arguments_one ) ; 

	(  shift 88
	.  error


state 37
	statement:  FOR.{ statements_zero } ; 
	statement:  FOR.IDENTIFIER IN expr { statements_zero } ; 
	statement:  FOR.IDENTIFIER IN RANGE expr TO expr { statements_zero } ; 

	IDENTIFIER  shift 90
	{  shift 89
	.  error


state 38
	statement:  BREAK.; 

	;  shift 91
	.  error


state 39
	statement:  GOTO.IDENTIFIER ; 

	IDENTIFIER  shift 92
	.  error


state 40
	statement:  SKIP.; 

	;  shift 93
	.  error


state 41
	statement:  expr.; 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.LAND expr 
	expr:  expr.LOR expr 
	expr:  expr.EQL expr 
	expr:  expr.LSS expr 
	expr:  expr.GTR expr 
	expr:  expr.NEQ expr 
	expr:  expr.LEQ expr 
	expr:  expr.GEQ expr 

	ADD  shift 95
	SUB  shift 96
	MUL  shift 97
	QUO  shift 98
	REM  shift 99
	AND  shift 100
	OR  shift 101
	XOR  shift 102
	SHL  shift 103
	SHR  shift 104
	LAND  shift 105
	LOR  shift 106
	EQL  shift 107
	LSS  shift 108
	GTR  shift 109
	NEQ  shift 110
	LEQ  shift 111
	GEQ  shift 112
	;  shift 94
	.  error


state 42
	statement:  ;.    (49)

	.  reduce 49 (src line 320)


state 43
	statement:  const_def.    (50)

	.  reduce 50 (src line 324)


state 44
	expr:  NUMBER.    (52)

	.  reduce 52 (src line 333)


state 45
	expr:  NOT.expr 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 113

state 46
	expr:  SUB.expr 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 114

state 47
	expr:  (.expr ) 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 115

state 48
	expr:  TIMEOUT_RECV.( arguments_one ) 

	(  shift 116
	.  error


state 49
	expr:  TIMEOUT_PEEK.( arguments_one ) 

	(  shift 117
	.  error


state 50
	expr:  NONBLOCK_RECV.( arguments_one ) 

	(  shift 118
	.  error


state 51
	expr:  NONBLOCK_PEEK.( arguments_one ) 

	(  shift 119
	.  error


state 52
	expr:  [.arguments_one ] 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 121
	arguments_one  goto 120

state 53
	data_def:  DATA IDENTIFIER { idents_one.} ; 

	}  shift 122
	.  error


state 54
	idents_one:  IDENTIFIER.    (79)
	idents_one:  IDENTIFIER., 
	idents_one:  IDENTIFIER., idents_one 

	,  shift 123
	.  reduce 79 (src line 444)


state 55
	module_def:  MODULE IDENTIFIER ( parameters_zero.) { module_body_zero } ; 

	)  shift 124
	.  error


state 56
	parameters_zero:  parameters_one.    (83)

	.  reduce 83 (src line 463)


state 57
	parameters_one:  parameter.    (84)
	parameters_one:  parameter., 
	parameters_one:  parameter., parameters_one 

	,  shift 125
	.  reduce 84 (src line 468)


state 58
	parameter:  IDENTIFIER.type 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 126

state 59
	const_def:  CONST IDENTIFIER type ASSIGN.expr ; 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 127

state 60
	type:  [ ].type 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 128

state 61
	type:  CHANNEL {.types_one } 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	types_one  goto 129
	type  goto 130

state 62
	type:  CHANNEL [.] { types_one } 
	type:  CHANNEL [.expr ] { types_one } 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	]  shift 131
	.  error

	expr  goto 132

state 63
	type:  UNSTABLE CHANNEL.{ types_one } 
	type:  UNSTABLE CHANNEL.[ ] { types_one } 
	type:  UNSTABLE CHANNEL.[ expr ] { types_one } 

	{  shift 133
	[  shift 134
	.  error


state 64
	proc_def:  PROC IDENTIFIER ( parameters_zero.) { statements_zero } ; 

	)  shift 135
	.  error


state 65
	init_block:  INIT { statements_zero }.; 

	;  shift 136
	.  error


state 66
	statements_zero:  statement statements_zero.    (19)

	.  reduce 19 (src line 198)


state 67
	statement:  IDENTIFIER :.statement 

	IDENTIFIER  shift 29
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	CONST  shift 10
	VAR  shift 31
	IF  shift 32
	CHOICE  shift 33
	RECV  shift 34
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	PEEK  shift 35
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	SEND  shift 36
	FOR  shift 37
	BREAK  shift 38
	GOTO  shift 39
	SKIP  shift 40
	{  shift 30
	;  shift 42
	(  shift 47
	[  shift 52
	.  error

	const_def  goto 43
	statement  goto 137
	expr  goto 41

state 68
	statement:  IDENTIFIER ASSIGN.expr ; 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 138

state 69
	statement:  IDENTIFIER ADD_ASSIGN.expr ; 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error

	expr  goto 139

state 70
	statement:  IDENTIFIER SUB_ASSIGN.expr ; 

	IDENTIFIER  shift 83
	NUMBER  shift 44
	SUB  shift 46
	NOT  shift 45
	TIMEOUT_RECV  shift 48
	NONBLOCK_RECV  shift 50
	TIMEOUT_PEEK  shift 49
	NONBLOCK_PEEK  shift 51
	(  shift 47
	[  shift 52
	.  error
